# LLaVA-Med

./: .gitignore  pyproject.toml  shell.nix
llava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llava/instruct/cervical_spine/: prompt.py  scrape.py
llava/model/: llava.py
