[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "0.1.0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "sentencepiece", "tokenizers==0.20.3",
    "torch", "torchvision", "uvicorn", "wandb",
    "transformers @ git+https://github.com/huggingface/transformers.git@768f3c016",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "lxml>=4.9.0",  # For faster XML parsing
    "anthropic>=0.7.0",
    "typing-extensions>=4.9.0",
    "open-clip-torch>=2.29.0"
]

[project.urls]
"Homepage" = "https://github.com/microsoft/LLaVA-Med"
"Bug Tracker" = "https://github.com/microsoft/LLaVA-Med/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
